# monovault

./: .gitignore  Cargo.toml  README.md  run  rustfmt.toml  test.sh
proto/: rpc.proto
report/: draft.org  draft.tex  report.org  report.tex  zotero.bib
report/evaluation/: desc.tex
src/: background_worker.rs  caching_remote.rs  database.rs  fuse.rs  lib.rs  local_vault.rs  main.rs  remote_vault.rs  rpc.rs  types.rs  vault_server.rs
