[package]
name = "monovault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.11"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
rusqlite = "0.27"
clap = { version = "3.1", features = ["derive"] }
libc = "0.2"
log = "0.4"
env_logger = "0.6"